# Messenger

./: .gitignore  CMakeLists.txt  README.md
Accounts/: CMakeLists.txt
Accounts/include/: AbstractAccount.hpp  Accounts.hpp  TempAccount.hpp  UserAccount.hpp
Accounts/src/: AbstractAccount.cpp  TempAccount.cpp  UserAccount.cpp
Cryptography/: CMakeLists.txt
Cryptography/include/: Hash.hpp
PhoneNumber/: CMakeLists.txt
PhoneNumber/src/: PhoneNumber.cpp
Preprocessor/: Preprocessor.hpp
Server/: CMakeLists.txt
Server/include/: AccountBase.hpp  AccountFactory.hpp  ChatManager.hpp  Server.hpp  ServerError.hpp
Server/src/: AccountBase.cpp  AccountFactory.cpp  ChatManager.cpp  Server.cpp
client_messenger/: CMakeLists.txt  build.cmd
client_messenger/Account/: CMakeLists.txt
client_messenger/Account/include/: Account.hpp  account.hpp
client_messenger/Account/src/: Account.cpp  account.cpp
client_messenger/ChatManager/: CMakeLists.txt
client_messenger/ChatManager/include/: ChatManager.hpp  Command.hpp  chat_manager.hpp
client_messenger/ChatManager/src/: ChatManager.cpp  Command.cpp  chat_manager.cpp  command.cpp
client_messenger/Console/: CMakeLists.txt
client_messenger/Console/include/: Console.hpp  console.hpp
client_messenger/Console/src/: Console.cpp  console.cpp
client_messenger/Error/: CMakeLists.txt
client_messenger/Error/include/: Error.hpp
client_messenger/Error/src/: Error.cpp
client_messenger/FileWork/: CMakeLists.txt
client_messenger/FileWork/include/: FileWork.hpp  file_work.hpp
client_messenger/FileWork/src/: FileWork.cpp  file_work.cpp
client_messenger/Settings/: FileNames.hpp  lenguage.hpp
client_messenger/main/: CMakeLists.txt  main.cpp  version.hpp
main/: CMakeLists.txt  main.cpp
server_messenger/: CMakeLists.txt  Infoimation.txt
server_messenger/Accounts/: CMakeLists.txt
server_messenger/Accounts/include/: AbstractAccount.hpp  Accounts.hpp  TempAccount.hpp  UserAccount.hpp  abstract_account.hpp  temp_account.hpp  user_account.hpp
server_messenger/Accounts/src/: AbstractAccount.cpp  TempAccount.cpp  UserAccount.cpp  abstract_account.cpp  temp_account.cpp  user_account.cpp
server_messenger/Cryptography/: CMakeLists.txt
server_messenger/Cryptography/include/: Hash.hpp  Rand.hpp
server_messenger/Cryptography/src/: Hash.cpp  Rand.cpp  hash.cpp  rand.cpp
server_messenger/Files/: data_base_work.hpp  file_names.hpp
server_messenger/PhoneNumber/: CMakeLists.txt
server_messenger/PhoneNumber/include/: PhoneNumber.hpp  phone_number.hpp
server_messenger/PhoneNumber/src/: PhoneNumber.cpp  phone_number.cpp
server_messenger/Preprocessor/: preprocessor.hpp
server_messenger/Server/: CMakeLists.txt
server_messenger/Server/include/: AccountBase.hpp  AccountFactory.hpp  ChatManager.hpp  Server.hpp  ServerError.hpp  account_base.hpp  account_factory.hpp  chat_manager.hpp
server_messenger/Server/src/: AccountBase.cpp  AccountFactory.cpp  ChatManager.cpp  Server.cpp  account_base.cpp  account_factory.cpp  chat_manager.cpp  server.cpp
server_messenger/ThreadPool/: CMakeLists.txt
server_messenger/ThreadPool/include/: ThreadPool.hpp  thread_pool.hpp
server_messenger/ThreadPool/src/: ThreadPool.cpp  thread_pool.cpp
server_messenger/main/: CMakeLists.txt  main.cpp  version.hpp.in
